--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
   /* background: color imagem, repeate, position/size */
   /* o size cover cobre todo o espaço vazio */
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -74,12 +75,16 @@ body * {
   z-index: 1;
   left: 0;
   top: 50%;
+  animation: slide-out 0.2s;
   transform: translateY(-50%);
 }
 
-.light #switch button{
-  right: 0;
-  left: initial;
+.light #switch button {
+  animation: slide-in 0.2s forwards;
+}
+
+#switch button:hover{
+  outline: 8px solid var(--surface-color-hover);
 }
 
 #switch span {
@@ -146,4 +151,35 @@ footer {
   text-align: center;
   padding: 24px 0;
   font-size: 14px;
+}
+
+/* responsividade */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(/assets/bg-desktop-light.jpg);
+  }
+}
+
+/* animações */
+
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-out {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
+  }
 }
